# oracle-weather

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.example.yaml  config.py  config_manager.py  demo.tape  main.py  pyproject.toml  pytest.ini  requirements.txt  weather_dashboard.py  weather_live_pro.py
.github/workflows/: test.yml
data/: __init__.py  art.py  dialogue.py
engine/: __init__.py
engine/creatures/: __init__.py  core.py
engine/effects/: __init__.py  special_effects.py
engine/personality/: __init__.py  core.py
engine/physics/: __init__.py  atmosphere.py  noise.py  particles.py
engine/rendering/: __init__.py  core.py
lib/: __init__.py  achievements.py  dashboard_panels.py  interactive.py  mock_weather.py  particles.py  sparkline.py  weather_api.py  weather_extended.py
screens/: __init__.py  achievements.py  bestiary.py  search.py
tests/: test_engine.py  test_extended.py
